--- a/css/terlecturaestilo.css
+++ b/css/terlecturaestilo.css
@@ -8,12 +8,11 @@ h3 {
 article {
 	border-radius: 10px;
 	width: 50%;
-	height: 1150px;
+	height: 800px;
 	background: #ccc;
 	margin: 20px auto;
 	padding: 30px;
-	border: 3px solid #000;	
-	line-height: 30px;
+	border: 2px solid #000;	
 }
 li {
 	list-style: none;
@@ -27,17 +26,20 @@ body{
 p {
 
 	line-height: 30px;
-	color: rgb(70, 18, 29);
+	color: rgb(53, 36, 40);
+	
 }
 img {
 	margin: auto;
 	display: block;
-	border-radius: 5px;
-
+	border-radius: 2px;
+	
 }
 div {
 	line-height: 30px;
-    color: rgb(70, 18, 29);
+    color: rgb(53, 36, 40);
+
+	float: left;
 }
 html {
 	font-size: 16px;
